--- a/tsconfig.json
+++ b/tsconfig.json
@@ -22,6 +22,9 @@
       "@/*": ["./src/*"]
     }
   },
+  "rules":{
+    "@typescript-eslint/no-unused-vars": "off"
+   },
   "include": ["next-env.d.ts", "**/*.ts", "**/*.tsx", ".next/types/**/*.ts"],
   "exclude": ["node_modules"]
 }
